--- a/package.json
+++ b/package.json
@@ -1,11 +1,12 @@
 {
   "name": "create-next-example-app",
   "scripts": {
-    "dev": "next",
+    "dev": "node index.js",
     "build": "next build",
     "start": "next start"
   },
   "dependencies": {
+    "express": "^4.17.1",
     "next": "^9.0.2",
     "next-i18next": "^0.47.0",
     "react": "^16.8.6",
